--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require": {
         "php": ">=7.0",
         "symfony/symfony": "~2.8",
-        "symfony/framework-bundle": "~2.7",
-        "swiftmailer/swiftmailer": "~5.4"
+        "symfony/framework-bundle": "~2.7"
     },
     "autoload": {
         "psr-0": { "EXS\\SimpleMongoBundle": "" }
