--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "symfony/symfony": "~2.8",
-        "symfony/framework-bundle": "~2.7"
+        "symfony/symfony": "3.4.x-dev",
+        "symfony/framework-bundle": "3.4.x-dev"
     },
     "autoload": {
         "psr-0": { "EXS\\SimpleMongoBundle": "" }
